spacing fix

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     top: 0;
     z-index: 1000;
     padding-top: 36px;
-    padding-bottom: 20px;
+    padding-bottom: 32px;
 }
 
 .scroll-wrapper {
@@ -42,15 +42,34 @@ body {
     max-width: 100%;
     max-height: 90%;
     height: auto;
-    margin-bottom: 40px;
+    margin-top: 24px;
     object-fit: contain; /* Maintain intrinsic dimensions */
     align-self: flex-start;
 }
+
+.exhibition-img-vert{
+    height: 540px;
+    width: auto;
+    margin-top: 24px;
+    object-fit: contain; /* Maintain intrinsic dimensions */
+    align-self: flex-start;
+}
+
 .exhibition-img-captioned {
     max-width: 100%;
     max-height: 90%;
-    margin-bottom: 10px;
+    margin-top: 24px;
+    margin-bottom: 4px;
     height: auto;
+    object-fit: contain; /* Maintain intrinsic dimensions */
+    align-self: flex-start;
+}
+
+.exhibition-img-vert-captioned{
+    height: 540px;
+    width: auto;
+    margin-top: 24px;
+    margin-bottom: 4px;
     object-fit: contain; /* Maintain intrinsic dimensions */
     align-self: flex-start;
 }
@@ -124,7 +143,6 @@ nav ul li a:hover, nav ul li a:focus {
     width: 360px;
     object-fit: contain; /* Maintain intrinsic dimensions */
     margin-left: 0;
-    margin-top: 10px;
 }
 
 .img-hr-container {
